# Author: Dominik Harmim <harmim6@gmail.com>

CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(vid)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS_DEBUG
	"${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Werror -pedantic -g -D DEBUG")

FIND_PACKAGE(MPI)
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

ADD_EXECUTABLE(${PROJECT_NAME} vid.cpp)
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE ${MPI_CXX_COMPILE_FLAGS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
